// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. tile a 1`] = `
<Link>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </View>
  <View>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </View>
</Link>
`;

exports[`2. tile b 1`] = `
<Link>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
    <Text>
      <Text>
        
        The 
        <Text>
          Duke of Edinburgh
        </Text>
         could be charged with driving without due care and attention after his car accident yesterday
        ...
      </Text>
    </Text>
  </View>
</Link>
`;

exports[`3. tile c 1`] = `
<Link>
  <View>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </View>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </View>
</Link>
`;

exports[`4. tile d 1`] = `
<Link>
  <View>
    <View>
      <Image
        aspectRatio={1.5}
        uri="https://img/someImage"
      />
    </View>
    <View>
      <View>
        <Text>
          ROYALS
        </Text>
      </View>
      <Text
        accessibilityRole="heading"
        aria-level="3"
      >
        Prince Philip ‘could be prosecuted’ over car crash
      </Text>
      <ArticleFlags
        flags={
          Array [
            "NEW",
          ]
        }
      />
    </View>
  </View>
</Link>
`;

exports[`5. tile e 1`] = `
<Link>
  <View>
    <View>
      <Image
        aspectRatio={0.8}
        uri="http://image.io/4by5"
      />
    </View>
    <View>
      <View>
        <Text>
          ROYALS
        </Text>
      </View>
      <Text
        accessibilityRole="heading"
        aria-level="3"
      >
        Prince Philip ‘could be prosecuted’ over car crash
      </Text>
      <ArticleFlags
        flags={
          Array [
            "NEW",
          ]
        }
      />
    </View>
  </View>
</Link>
`;
